--- a/forms.css
+++ b/forms.css
@@ -41,6 +41,7 @@ button{
     margin-left: 33%;
 }
 error-output{
+    margin-left: 1%;
     font-size: 16px;
     font-style: italic;
     color: red;
