--- a/forms.css
+++ b/forms.css
@@ -36,13 +36,41 @@ output{
 }
 button{
     margin-top: 7px;
-    width: 500px;
+    width:40%;
+    margin-left: 30%;
     padding: 5px;
-    margin-left: 33%;
 }
 error-output{
     margin-left: 1%;
     font-size: 16px;
     font-style: italic;
     color: red;
+}
+
+@media screen and (max-width:320px)  {
+  
+header{
+    font-size: 12px;
+    padding: 20px;
+
+}   
+
+label{
+   font-size: 12px;
+   width:55% ;
+}
+
+output{
+    font-size: 12px;
+}
+
+input{
+    font-size: 12px;
+    width:25% ;
+}
+    
+error-output{
+    
+    font-size: 12px;
+}
 }
